{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 343,
  "lineage": "f5b831f2-47bc-2a70-946d-8c03c17673df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08addd53c7c170697",
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:elastic-ip/eipalloc-08addd53c7c170697",
            "domain": "vpc",
            "id": "eipalloc-08addd53c7c170697",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-3-0-125-36.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.125.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-otms-eip"
            },
            "tags_all": {
              "Name": "dev-otms-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:internet-gateway/igw-0aec996c218e409b6",
            "id": "igw-0aec996c218e409b6",
            "owner_id": "466171398477",
            "tags": {
              "Name": "dev-otms-igw"
            },
            "tags_all": {
              "Name": "dev-otms-igw"
            },
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:466171398477:loadbalancer/app/dev-alb/33a763564584303f",
            "arn_suffix": "app/dev-alb/33a763564584303f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-alb-272345877.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:466171398477:loadbalancer/app/dev-alb/33a763564584303f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f1874063d3a3285e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006ca21bbad15b8e2"
              },
              {
                "subnet_id": "subnet-0152d914e73b10bf6"
              }
            ],
            "subnets": [
              "subnet-006ca21bbad15b8e2",
              "subnet-0152d914e73b10bf6"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-07362eb197e707a43",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08addd53c7c170697",
            "association_id": "eipassoc-0073624723b9b3eb6",
            "connectivity_type": "public",
            "id": "nat-06a7adfb07467517e",
            "network_interface_id": "eni-05240c99f7a0cddac",
            "private_ip": "192.168.0.4",
            "public_ip": "3.0.125.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0152d914e73b10bf6",
            "tags": {
              "Name": "dev-otms-natgw"
            },
            "tags_all": {
              "Name": "dev-otms-natgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:network-acl/acl-09e04b6ed7ef418c2",
            "egress": [],
            "id": "acl-09e04b6ed7ef418c2",
            "ingress": [],
            "owner_id": "466171398477",
            "subnet_ids": [],
            "tags": {
              "Name": "frontend",
              "app_name": "networkskeleton",
              "costcenter": "otms"
            },
            "tags_all": {
              "Name": "frontend",
              "app_name": "networkskeleton",
              "costcenter": "otms"
            },
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:network-acl/acl-0da284da4289ff289",
            "egress": [],
            "id": "acl-0da284da4289ff289",
            "ingress": [],
            "owner_id": "466171398477",
            "subnet_ids": [],
            "tags": {
              "Name": "public",
              "app_name": "networkskeleton",
              "costcenter": "otms"
            },
            "tags_all": {
              "Name": "public",
              "app_name": "networkskeleton",
              "costcenter": "otms"
            },
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "frontend-egress-100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3172951031",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09e04b6ed7ef418c2",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-egress-100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4213786918",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0da284da4289ff289",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "frontend-ingress-100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "192.168.0.0/28",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1079435690",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09e04b6ed7ef418c2",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "frontend-ingress-200",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "192.168.0.0/28",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1010287729",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09e04b6ed7ef418c2",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-ingress-100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2301128489",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0da284da4289ff289",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0805cb7ad526759d21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06a7adfb07467517e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0805cb7ad526759d2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aec996c218e409b6",
            "id": "r-rtb-0d32d4401ef227e571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d32d4401ef227e57",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:route-table/rtb-0805cb7ad526759d2",
            "id": "rtb-0805cb7ad526759d2",
            "owner_id": "466171398477",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-otms-private-rt"
            },
            "tags_all": {
              "Name": "dev-otms-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:route-table/rtb-0d32d4401ef227e57",
            "id": "rtb-0d32d4401ef227e57",
            "owner_id": "466171398477",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-otms-public-rt"
            },
            "tags_all": {
              "Name": "dev-otms-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c856fdea36c99d04",
            "route_table_id": "rtb-0805cb7ad526759d2",
            "subnet_id": "subnet-086adf08d44bc8726"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4748155b7efdadd",
            "route_table_id": "rtb-0805cb7ad526759d2",
            "subnet_id": "subnet-00313c0d1dd9ccaea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0588f30119c720e93",
            "route_table_id": "rtb-0805cb7ad526759d2",
            "subnet_id": "subnet-043e0ffb2052d4b7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c75bc77c48e76dbc",
            "route_table_id": "rtb-0d32d4401ef227e57",
            "subnet_id": "subnet-0152d914e73b10bf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f75d9c7f716f376",
            "route_table_id": "rtb-0d32d4401ef227e57",
            "subnet_id": "subnet-006ca21bbad15b8e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-0f1874063d3a3285e",
            "description": "Security group for alb",
            "egress": [],
            "id": "sg-0f1874063d3a3285e",
            "ingress": [],
            "name": "dev-alb-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-alb-sg"
            },
            "tags_all": {
              "Name": "dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "attendance",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-0e4e85e4463b53cd4",
            "description": "Security group for attendance",
            "egress": [],
            "id": "sg-0e4e85e4463b53cd4",
            "ingress": [],
            "name": "dev-attendance-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-attendance-sg"
            },
            "tags_all": {
              "Name": "dev-attendance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "bastion",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-0465a22936044cde1",
            "description": "Security group for bastion",
            "egress": [],
            "id": "sg-0465a22936044cde1",
            "ingress": [],
            "name": "dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-bastion-sg"
            },
            "tags_all": {
              "Name": "dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "employee",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-0f6c9658b83590000",
            "description": "Security group for employee",
            "egress": [],
            "id": "sg-0f6c9658b83590000",
            "ingress": [],
            "name": "dev-employee-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-employee-sg"
            },
            "tags_all": {
              "Name": "dev-employee-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "frontend",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-007865b1d107cdbf6",
            "description": "Security group for frontend",
            "egress": [],
            "id": "sg-007865b1d107cdbf6",
            "ingress": [],
            "name": "dev-frontend-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-frontend-sg"
            },
            "tags_all": {
              "Name": "dev-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "notification",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-0e676a549104adcfc",
            "description": "Security group for notification",
            "egress": [],
            "id": "sg-0e676a549104adcfc",
            "ingress": [],
            "name": "dev-notification-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-notification-sg"
            },
            "tags_all": {
              "Name": "dev-notification-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "postgresql",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-0e8e194369ff778b5",
            "description": "Security group for postgresql",
            "egress": [],
            "id": "sg-0e8e194369ff778b5",
            "ingress": [],
            "name": "dev-postgresql-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-postgresql-sg"
            },
            "tags_all": {
              "Name": "dev-postgresql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "redis",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-0ba2b060aa409c58d",
            "description": "Security group for redis",
            "egress": [],
            "id": "sg-0ba2b060aa409c58d",
            "ingress": [],
            "name": "dev-redis-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-redis-sg"
            },
            "tags_all": {
              "Name": "dev-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "salary",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-0b92258d8837dd27f",
            "description": "Security group for salary",
            "egress": [],
            "id": "sg-0b92258d8837dd27f",
            "ingress": [],
            "name": "dev-salary-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-salary-sg"
            },
            "tags_all": {
              "Name": "dev-salary-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "scylla",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-045608b0e9face8ca",
            "description": "Security group for scylla",
            "egress": [],
            "id": "sg-045608b0e9face8ca",
            "ingress": [],
            "name": "dev-scylla-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-scylla-sg"
            },
            "tags_all": {
              "Name": "dev-scylla-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-egress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound",
            "from_port": 0,
            "id": "sgrule-3304717265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f1874063d3a3285e",
            "security_group_rule_id": "sgr-03b4d8ca436ac60eb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "alb-ingress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP access",
            "from_port": 80,
            "id": "sgrule-2030393936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f1874063d3a3285e",
            "security_group_rule_id": "sgr-0f9b8419ac0bd8207",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "alb-ingress-1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS access",
            "from_port": 443,
            "id": "sgrule-2535915081",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f1874063d3a3285e",
            "security_group_rule_id": "sgr-08abc58540ac43ef5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "bastion-egress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound",
            "from_port": 0,
            "id": "sgrule-3354948718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0465a22936044cde1",
            "security_group_rule_id": "sgr-0f67fabe652158341",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "bastion-ingress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow bastion",
            "from_port": 1194,
            "id": "sgrule-2448390873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0465a22936044cde1",
            "security_group_rule_id": "sgr-0d10f8c201c827184",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 1194,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "bastion-ingress-1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow bastion",
            "from_port": 80,
            "id": "sgrule-2222042421",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0465a22936044cde1",
            "security_group_rule_id": "sgr-02608007a26f18c8c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "bastion-ingress-2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow bastion",
            "from_port": 22,
            "id": "sgrule-855371904",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0465a22936044cde1",
            "security_group_rule_id": "sgr-09ee33822a33885cd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "bastion-ingress-3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow bastion",
            "from_port": 443,
            "id": "sgrule-2893413216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0465a22936044cde1",
            "security_group_rule_id": "sgr-05969333d5645c74c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "bastion-ingress-4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow bastion",
            "from_port": 943,
            "id": "sgrule-3242235836",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0465a22936044cde1",
            "security_group_rule_id": "sgr-01233133d78b4768b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 943,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "bastion-ingress-5",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow bastion",
            "from_port": 945,
            "id": "sgrule-1958857634",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0465a22936044cde1",
            "security_group_rule_id": "sgr-0a8537a5131b763e6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 945,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "bastion-ingress-6",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all traffic",
            "from_port": 0,
            "id": "sgrule-684693375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0465a22936044cde1",
            "security_group_rule_id": "sgr-030af927ef57367ad",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "frontend-egress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound",
            "from_port": 0,
            "id": "sgrule-625087343",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-007865b1d107cdbf6",
            "security_group_rule_id": "sgr-0525f42115796582f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "frontend-ingress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH from bastion",
            "from_port": 22,
            "id": "sgrule-3578698826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-007865b1d107cdbf6",
            "security_group_rule_id": "sgr-01e59e08f5c1a9b1e",
            "self": false,
            "source_security_group_id": "sg-0465a22936044cde1",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "frontend-ingress-1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP from alb",
            "from_port": 3000,
            "id": "sgrule-2099226620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-007865b1d107cdbf6",
            "security_group_rule_id": "sgr-012e47498f233f457",
            "self": false,
            "source_security_group_id": "sg-0f1874063d3a3285e",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:subnet/subnet-086adf08d44bc8726",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086adf08d44bc8726",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466171398477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-private-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:subnet/subnet-00313c0d1dd9ccaea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00313c0d1dd9ccaea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466171398477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-private-2",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-private-2",
              "Tier": "private"
            },
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:subnet/subnet-043e0ffb2052d4b7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043e0ffb2052d4b7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466171398477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-private-3",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-private-3",
              "Tier": "private"
            },
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:subnet/subnet-0152d914e73b10bf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0152d914e73b10bf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "466171398477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-bastion-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-bastion-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:subnet/subnet-006ca21bbad15b8e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006ca21bbad15b8e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "466171398477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-bastion-2",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-bastion-2",
              "Tier": "public"
            },
            "vpc_id": "vpc-07362eb197e707a43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:vpc/vpc-07362eb197e707a43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-01255ad9cb672f9c1",
            "default_route_table_id": "rtb-0af149ede52e18d1c",
            "default_security_group_id": "sg-0d6fb0185d15c8c86",
            "dhcp_options_id": "dopt-03a082a8f7849a1a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07362eb197e707a43",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af149ede52e18d1c",
            "owner_id": "466171398477",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-vpc",
              "Owner": "cloudops_crew",
              "Project": "otms"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-vpc",
              "Owner": "cloudops_crew",
              "Project": "otms"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}